testsuite/tests/parser/should_fail/T8501c.stderr

T8501c.hs:4:7: error: [GHC-88464]
    Variable not in scope:
      mdo :: (String -> IO ()) -> GHC.Base.String -> IO ()
    Suggested fixes:
      • Perhaps use ‘mod’ (imported from Prelude)
      • Perhaps you intended to use RecursiveDo
